--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,20 @@ h2 {
     margin-bottom: 1rem;
 }
 
+h3 {
+    color: #3498db;
+    margin: 1rem 0 0.5rem;
+}
+
+ul {
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+li {
+    margin-bottom: 0.5rem;
+}
+
 section {
     margin-bottom: 2rem;
     padding: 1.5rem;
